--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -12,12 +12,14 @@
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              services_path, :class => 'btn'  %>
+      services_path,
+      :class => 'btn' %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_service_path(@service), :class => 'btn' %>
+      edit_service_path(@service),
+      :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              service_path(@service),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
+      service_path(@service),
+      :method => 'delete',
+      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+      :class => 'btn btn-danger' %>
 </div>
