--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = @service.class -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+  <h1><%=t '.title', default: model_class.model_name.human %></h1>
 </div>
 
 <dl class="dl-horizontal">
@@ -11,15 +11,44 @@
 </dl>
 
 <div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
+  <%= link_to t('.back', default: t("helpers.links.back")),
       services_path,
-      :class => 'btn' %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+      class: 'btn' %>
+  <%= link_to t('.edit', default: t("helpers.links.edit")),
       edit_service_path(@service),
-      :class => 'btn' %>
+      class: 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
       service_path(@service),
-      :method => 'delete',
-      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-      :class => 'btn btn-danger' %>
+      method: 'delete',
+      confirm: t('.confirm', default: t("helpers.links.confirm", default: 'Are you sure?')),
+      class: 'btn btn-danger' %>
+</div>
+
+<div>
+</div>
+
+<div class="page-header">
+  <h2><%=t '.hosts' %></h2>
+</div>
+
+<div class="row">
+  <% @service.hosts.each do |host| %>
+    <div class="span5">
+      <ul>
+        <li><%= host.class.human_attribute_name(:hostname) %>: <%= host.hostname %></li>
+        <li><%= host.class.human_attribute_name(:ip_address) %>: <%= host.ip_address %></li>
+      </ul>
+      <div class="span5">
+        <%= link_to t('.show', default: t("helpers.links.show")),
+            host_path(host),
+            class: 'btn' %>
+        <%= link_to t('.edit', default: t("helpers.links.edit")),
+            edit_host_path(host),
+            class: 'btn' %>
+      </div>
+    </div>
+    <div class="span7">
+      <%= image_tag host.graph_path_for('load', 'load') %>
+    </div>
+  <% end %>
 </div>
