--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,23 +20,35 @@
   </head>
   <body>
 
-    <div class="navbar navbar-fixed-top">
+    <header class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="/">Hyperion</a>
-          <div class="container nav-collapse">
-            <ul class="nav">
+          <%= link_to "Hyperion", root_path, class: "brand" %>
+          <nav>
+            <ul class="nav pull-right">
+              <li><%= link_to "Home", root_path %></li>
               <li><%= link_to "Services", services_path  %></li>
+              <% if signed_in? %>
+                <li id="fat-menu" class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    <%= image_tag current_user.image, width: 16, height: 16 %>
+                    <%= current_user.name %> <b class="caret"></b>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <%= link_to "Sign out", signout_path, method: "delete" %>
+                    </li>
+                  </ul>
+                </li>
+              <% else %>
+                <li><%= link_to "Sign in", signin_path %></li>
+              <% end %>
             </ul>
-          </div><!--/.nav-collapse -->
+          </nav>
         </div>
       </div>
-    </div>
+    </header>
+
 
     <div class="container">
       <div class="content">
