Add notification feature as Android's tost-like view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,5 +70,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <%= javascript_include_tag "application" %>
 
+    <% if toast -%>
+      <%= render 'shared/toast', args: { message: toast, type: 'success' } %>
+    <% end -%>
   </body>
 </html>
