Make toast option more customizable.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
     <%= javascript_include_tag "application" %>
 
     <% if toast -%>
-      <%= render 'shared/toast', args: { message: toast, type: 'success' } %>
+      <%= render 'shared/toast', toast: toast %>
     <% end -%>
   </body>
 </html>
